--- a/public/style/model/_chat.scss
+++ b/public/style/model/_chat.scss
@@ -39,6 +39,7 @@ button:active {
     background: #fafafa;
     position: relative;
     overflow: hidden;
+    // background: url('../../assets/background.svg') repeat;
 
     #aside {
         position: absolute;
@@ -471,6 +472,16 @@ main {
         height: 100%;
         display: grid;
         place-items: center;
+        background: url('../../assets/background.svg') repeat;
+
+        .inner_chat {
+            width: inherit;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.7);
+            display: flex;
+            align-items: center;
+
+        }
 
         .no_chat_logo {
             font-size: 200px;
@@ -714,8 +725,9 @@ main {
 }
 
 .msg-bubble {
-    max-width: 450px;
+    max-width: 70%;
     padding: 15px;
+    padding-bottom: 0px;
     border-radius: 15px;
     background: #fff;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -723,7 +735,7 @@ main {
 
 .msg-info {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     margin-bottom: 10px;
 }
@@ -734,7 +746,8 @@ main {
 }
 
 .msg-info-time {
-    font-size: 0.85em;
+    font-size: 0.65em;
+    margin-top: 10px;
 }
 
 .left-msg .msg-bubble {
@@ -852,4 +865,17 @@ main {
     background: #fff;
     cursor: pointer;
     border: 1px solid #ddd;
+}
+
+.loading_page {
+    background: url('../../assets/chat_bg.svg') repeat;
+    width: 100%;
+    height: 100vh;
+
+    .inner_page {
+        height: inherit;
+        width: inherit;
+        backdrop-filter: blur(1px);
+    }
+
 }
