--- a/public/style/model/_chat_dark.scss
+++ b/public/style/model/_chat_dark.scss
@@ -144,9 +144,11 @@
             }
 
             .chat_section {
-                // height: 100%;
-                background: url(/_next/static/media/background.9785ec93.svg) repeat;
-                // box-shadow: inset rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+                background: #000;
+            }
+
+            .menu_btn {
+                color: #fff;
             }
         }
     }
